tests/ui/associated-types/cache/project-fn-ret-contravariant.transmute.stderr
error: lifetime may not live long enough
  --> $DIR/project-fn-ret-contravariant.rs:39:4
   |
LL | fn baz<'a,'b>(x: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
LL |    bar(foo, x)
   |    ^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

